<resources>

    <string name="lorem">Lorem</string>
    <string name="app_name">HCI_Stock</string>
    <string name="home_title">Tổng quan thị trường</string>
    <string name="hose_subTitle">Các chỉ số sàn HOSE</string>
    <string name="hnx_subTitle">Các chỉ số sàn HNX</string>
    <string name="world_subTitle">Các chỉ số các sàn trên thế giới</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tv_pagetitle_1">Tổng quan thị trường</string>

    <string name="tv_grid_header_1">Chỉ số</string>
    <string name="tv_grid_header_2">Giá</string>
    <string name="tv_grid_header_3">Thay đổi</string>
    <string name="tv_grid_header_4">GTGD</string>
    <string name="tv_grid_header_5">KLGD</string>

    <string name="marked_group_name">Marked</string>

    <string name="woods_group_name">Hàng hoá phổ biến</string>
    <string-array name="woods">
        <item>gold</item>
        <item>silver</item>
        <item>oil</item>
        <item>gas</item>
        <item>coffee</item>
        <item>sugar</item>
        <item>corn</item>
    </string-array>

    <string name="currency_group_name">Tiền tệ</string>
    <string-array name="currencies">
        <item>usd</item>
        <item>eur</item>
        <item>pound</item>
        <item>sgd</item>
        <item>hkd</item>
    </string-array>


    <string name="bank_interest_group_name">Lãi xuất ngân hàng</string>
    <string-array name="interests">
        <item>vcb</item>
        <item>acb</item>
        <item>vib</item>
        <item>tcb</item>
        <item>abb</item>
    </string-array>

    <string-array name="slide_menu_items">
        <item>Tất Cả Mã CK</item>
        <item>Tin Tức</item>
        <item>Danh Sách CK</item>
        <item>Lọc Mã CK</item>
        <item>Lịch chia cổ tức</item>
        <item>Từ Điển</item>
        <item>About</item>
    </string-array>

    <string-array name="sub_menu_Filter">
        <item>Recent</item>
        <item>Tự Tạo 1</item>
        <item>Tự Tạo 2</item>
    </string-array>

    <string-array name="sub_menu_News">
        <item>Tin Mới</item>
        <item>Tin Đọc Nhiều</item>
        <item>Tin Nước Ngoài</item>
    </string-array>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string-array name="snack_bar_list">
        <item>AAA sẽ giao dịch phiên cuối cùng tại...</item>
        <item>Tất cả các chỉ số đều tăng điểm, HSG...</item>
        <item>Những doanh nghiệp nổi danh thị trường chứng khoán...</item>
        <item>VDSC: Nếu “ngã ngựa” bởi sóng KQKD quý 3,...</item>
        <item>CTCK nhận định thị trường 08/11: Nếu ông Trump...</item>
        <item>Một doanh nghiệp vốn hóa 4 tỷ đô chuẩn bị gia nhập sàn Upcom...</item>
    </string-array>

    <string-array name="news">
        <item>Diễn biến mới về Brexit: Tránh hạ cánh cứng</item>
        <item>Vegetexco bị phạt hành chính vì chậm nộp hồ sơ đăng ký đại chúng</item>
        <item>Hủy kết quả chào bán cổ phần, CI5 sẽ hoàn trả chi phí và tiền mua cho nhà đầu tư</item>
        <item>Đã có kết luận sơ bộ vụ POR11 đối với sản phẩm tôm nước ấm đông lạnh của Việt Nam</item>
        <item>PCC1 được định giá 36,000 đồng/cp phiên đầu tiên chào sàn HOSE</item>
        <item>Trong tháng 10 tiêu thụ hơn 28 ngàn xe ô tô</item>
        <item>Công bố kết quả khắc phục những vi phạm của Formosa</item>
    </string-array>
</resources>
